1998-10-09  Andrew Veliath  <andrewtv@usa.net>

	* parser.y: (positive_int_const) Improve errors and warnings for
	nonsensical values.

1998-10-08  Andrew Veliath  <andrewtv@usa.net>

	* IDL.h (IDLF_NO_EVAL_CONST): New flag, obsoletes IDLF_EVAL_CONST,
	which has been removed.  The default behavior is now to evaluate
	constant expressions.

	* IDL.h, parser.y (IDL_resolve_const_exp): New function.
	positive_int_const changed to attempt resolution of expression to
	an integral value.  primary_expr will attempt resolution of scoped
	names, so constant evaluation is now much improved.  An
	IDL_NODE_IS_LITERAL is also now in IDL.h.

Thu Aug 27 10:52:41 1998  Andrew Veliath  <andrewtv@usa.net>

	* Update version to 0.5.0.

	* Updates to libIDL.texi, and renable in Makefile.am.

	* Integrate default maximum warning level into IDL_parse_filename.

Thu Aug 27 03:30:44 1998  Andrew Veliath  <andrewtv@usa.net>

	* parser.y: Generate error if one tries to inherit from the same
	interface more than once.  Also use IDL_ns_ident_to_qstring to
	give more concise identifiers in error messages.

Thu Aug 27 01:08:56 1998  Andrew Veliath  <andrewtv@usa.net>

	* IDL.h: Removed IDL_TRUE and IDL_FALSE, so we can just use the
	  glib TRUE and FALSE.  References switched...

	* util.c (IDL_tree_walk_in_order): (...pre_order changed to the
	more accurate ...in_order).  Behavior change, return value is now
	void, and returning TRUE from the IDL_tree_func means traverse
	this node, and FALSE means don't traverse this node, instead of
	the previous return FALSE and stop traversal all together.  This
	is much more useful for this context, I think.

Wed Aug 26 01:48:12 1998  Andrew Veliath  <andrewtv@usa.net>

	* util.c (IDL_tree_process_forward_dcls),
		(IDL_tree_remove_inhibits),
		(IDL_tree_remove_empty_modules): Remove debugging messages.

	* util.c (IDL_parse_filename): Only run optimization if tree is
	  non-NULL, and improve useless file message.
